--- a/index.html
+++ b/index.html
@@ -123,6 +123,19 @@
                 © 2023 CAFE. Tüm hakları saklıdır.
             </div>
         </div>
+            <!-- ... footer kodlarınız burada bitiyor ... -->
+    </footer>
+
+    <!-- YUKARI ÇIK BUTONU -->
+    <button id="scrollToTopBtn" title="Yukarı Çık">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+    <!-- YUKARI ÇIK BUTONU BİTİŞ -->
+
+    <!-- Local JavaScript File Link -->
+    <script src="script.js"></script>
+</body>
+</html>
     </footer>
 
     <!-- Local JavaScript File Link -->
